other/b-d/block-images-with-volumes/pods-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: image-vol
    image: clover/volume:passbolt
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: image-vol
    image: clover/volume:passbolt
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: image-vol
    image: clover/volume:passbolt
  - name: busybox
    image: busybox:1.35
