other/b-d/block-images-with-volumes/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-images-with-volumes
status:
  ready: true
